Добавлен сервис Auth и доработан сервис User для совместной работы
