# services/api/userapi.swagger.yaml
@@ -1,23 +1,19 @@
 openapi: 3.0.0
 info:
-  description: |
-    This is simple client API
   version: "1.0.0"
   title: User Service
-  contact:
-    email: schetinnikov@gmail.com
 servers:
-  - description: Example Server
+  - description: Default Host URL
     url: http://arch.homework
 tags:
   - name: user
     description: Operations about user
 paths:
   /api/v1/user:
-    post:
+    get:
       tags:
         - user
-      summary: create user
+      summary: get current user id
       operationId: createUser
       responses:
         '200':
@@ -26,46 +22,19 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/UserId'
+        '403':
+          description: forbidden response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
         default:
           description: unexpected error
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/User'
-            examples:
-              sample-user:
-                summary: Example
-                value:
-                  username: johndoe589
-                  firstName: John
-                  lastName: Doe
-                  email: bestjohn@doe.com
-                  phone: '+71002003040'
-        description: Created user object
-        required: true
-  /api/v1/users:
-    get:
-      tags:
-        - user
-      operationId: get all users
-      responses:
-        '200':
-          description: users response
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Users'
-        default:
-          description: unexpected error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
+
   /api/v1/user/{userId}:
     parameters:
       - name: userId
@@ -78,7 +47,7 @@ paths:
     get:
       tags:
         - user
-      operationId: find user by id
+      operationId: getUserProfile
       responses:
         '200':
           description: user response
@@ -86,19 +55,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/User'
-        default:
-          description: unexpected error
+        '403':
+          description: forbidden response
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
-    delete:
-      tags:
-        - user
-      operationId: deleteUser
-      responses:
-        '204':
-          description: user deleted
         default:
           description: unexpected error
           content:
@@ -126,6 +88,12 @@ paths:
       responses:
         '200':
           description: user updated
+        '403':
+          description: forbidden response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
         default:
           description: unexpected error
           content:
@@ -147,7 +115,7 @@ components:
         id:
           type: string
           format: uuid
-        username:
+        login:
           type: string
           maxLength: 255
         firstName:
@@ -160,10 +128,6 @@ components:
         phone:
           type: string
           format: phone
-    Users:
-      type: array
-      items:
-        $ref: '#/components/schemas/User'
     Error:
       type: object
       required:
