# services/pkg/user/infrastructure/postgres/userrepository.go
@@ -9,7 +9,7 @@ import (
 	"github.com/pkg/errors"
 )
 
-func NewUSerRepository(client *sqlx.DB) app.UserRepository {
+func NewUserRepository(client *sqlx.DB) app.UserRepository {
 	return &userRepository{client: client}
 }
 
@@ -19,10 +19,9 @@ type userRepository struct {
 
 func (repo *userRepository) Store(user *app.User) error {
 	const query = `
-			INSERT INTO users (id, username, first_name, last_name, email, phone)
-			VALUES (:id, :username, :first_name, :last_name, :email, :phone)
+			INSERT INTO users (id, first_name, last_name, email, phone)
+			VALUES (:id, :first_name, :last_name, :email, :phone)
 			ON CONFLICT (id) DO UPDATE SET
-				username = excluded.username,
 				first_name = excluded.first_name,
 				last_name = excluded.last_name,
 				email = excluded.email,
@@ -31,7 +30,6 @@ func (repo *userRepository) Store(user *app.User) error {
 
 	userx := sqlxUser{
 		ID:        string(user.UserID),
-		Username:  string(user.Username),
 		FirstName: user.FirstName,
 		LastName:  user.LastName,
 		Email:     string(user.Email),
@@ -49,7 +47,7 @@ func (repo *userRepository) Remove(id app.UserID) error {
 }
 
 func (repo *userRepository) FindByID(id app.UserID) (*app.User, error) {
-	const query = `SELECT id, username, first_name, last_name, email, phone FROM users WHERE id = $1`
+	const query = `SELECT id, first_name, last_name, email, phone FROM users WHERE id = $1`
 
 	var user sqlxUser
 	err := repo.client.Get(&user, query, string(id))
@@ -63,23 +61,8 @@ func (repo *userRepository) FindByID(id app.UserID) (*app.User, error) {
 	return &res, nil
 }
 
-func (repo *userRepository) FindByUserName(userName app.Username) (*app.User, error) {
-	const query = `SELECT id, username, first_name, last_name, email, phone FROM users WHERE username = $1`
-
-	var user sqlxUser
-	err := repo.client.Get(&user, query, string(userName))
-	if err != nil {
-		if err == sql.ErrNoRows {
-			return nil, app.ErrUserNotFound
-		}
-		return nil, errors.WithStack(err)
-	}
-	res := sqlxUserToUser(&user)
-	return &res, nil
-}
-
 func (repo *userRepository) FindAll() ([]app.User, error) {
-	const query = `SELECT id, username, first_name, last_name, email, phone FROM users`
+	const query = `SELECT id, first_name, last_name, email, phone FROM users`
 
 	var users []*sqlxUser
 	err := repo.client.Select(&users, query)
@@ -97,7 +80,6 @@ func (repo *userRepository) FindAll() ([]app.User, error) {
 func sqlxUserToUser(user *sqlxUser) app.User {
 	return app.User{
 		UserID:    app.UserID(user.ID),
-		Username:  app.Username(user.Username),
 		FirstName: user.FirstName,
 		LastName:  user.LastName,
 		Email:     app.Email(user.Email),
@@ -107,7 +89,6 @@ func sqlxUserToUser(user *sqlxUser) app.User {
 
 type sqlxUser struct {
 	ID        string `db:"id"`
-	Username  string `db:"username"`
 	FirstName string `db:"first_name"`
 	LastName  string `db:"last_name"`
 	Email     string `db:"email"`
